--- a/dudu/MainView/ShoppingCart/View/ShopCartTableViewCell.xib
+++ b/dudu/MainView/ShoppingCart/View/ShopCartTableViewCell.xib
@@ -1,21 +1,143 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ShopCartTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="126" id="KGk-i7-Jjw" customClass="ShopCartTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="126"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="125.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KGk-hl-i60">
+                        <rect key="frame" x="0.0" y="0.0" width="34" height="126"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="34" id="VlH-oh-rlG"/>
+                        </constraints>
+                        <state key="normal" image="购物车选中"/>
+                    </button>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PAb-10-vyr">
+                        <rect key="frame" x="34" y="20" width="86" height="86"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="86" id="bz3-ES-Szh"/>
+                            <constraint firstAttribute="height" constant="86" id="o8P-QI-omA"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lBt-v1-3Gw">
+                        <rect key="frame" x="130" y="20" width="180" height="16"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="16" id="EIp-W1-mCi"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k17-RS-UTU">
+                        <rect key="frame" x="130" y="40" width="50" height="15"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="50" id="NCO-nG-WzR"/>
+                            <constraint firstAttribute="height" constant="15" id="ts3-MC-QlO"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                        <color key="textColor" red="0.12549019610000001" green="0.85098039219999999" blue="0.58039215690000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ia6-VC-PQZ">
+                        <rect key="frame" x="130" y="69" width="170" height="12"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="12" id="xtr-Aa-4yT"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="auT-Ij-0Sg">
+                        <rect key="frame" x="130" y="88" width="93" height="18"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="18" id="566-ZT-1gL"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" red="0.95294117647058818" green="0.59215686274509804" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qh5-hh-SOA">
+                        <rect key="frame" x="284" y="82" width="21" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="21" id="CB2-E6-WGk"/>
+                            <constraint firstAttribute="height" constant="21" id="oAN-6J-KF0"/>
+                        </constraints>
+                        <state key="normal" image="+"/>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9KF-K0-3gV">
+                        <rect key="frame" x="233" y="82" width="21" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="21" id="5Qd-OA-2K6"/>
+                            <constraint firstAttribute="height" constant="21" id="gYs-dS-vs7"/>
+                        </constraints>
+                        <state key="normal" image="_"/>
+                    </button>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mxq-bw-PNG">
+                        <rect key="frame" x="19" y="125" width="282" height="0.5"/>
+                        <color key="backgroundColor" red="0.82745098039215681" green="0.82745098039215681" blue="0.82745098039215681" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="0.5" id="AFa-7c-C1t"/>
+                        </constraints>
+                    </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="34" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yBp-dn-bWg">
+                        <rect key="frame" x="259" y="82" width="20" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="RzG-ll-6Jb"/>
+                            <constraint firstAttribute="width" constant="20" id="eny-A2-WKK"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <color key="textColor" red="0.12549019610000001" green="0.85098039219999999" blue="0.58039215690000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="qh5-hh-SOA" firstAttribute="leading" secondItem="yBp-dn-bWg" secondAttribute="trailing" constant="5" id="0gW-G6-jx8"/>
+                    <constraint firstItem="PAb-10-vyr" firstAttribute="leading" secondItem="KGk-hl-i60" secondAttribute="trailing" id="3eX-NZ-LwN"/>
+                    <constraint firstItem="ia6-VC-PQZ" firstAttribute="top" secondItem="k17-RS-UTU" secondAttribute="bottom" constant="14" id="CI4-CL-usw"/>
+                    <constraint firstAttribute="bottom" secondItem="mxq-bw-PNG" secondAttribute="bottom" id="CmL-qc-Y95"/>
+                    <constraint firstItem="k17-RS-UTU" firstAttribute="top" secondItem="lBt-v1-3Gw" secondAttribute="bottom" constant="4" id="F3n-PA-Onl"/>
+                    <constraint firstItem="ia6-VC-PQZ" firstAttribute="leading" secondItem="PAb-10-vyr" secondAttribute="trailing" constant="10" id="FkJ-8J-FXc"/>
+                    <constraint firstItem="mxq-bw-PNG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="19" id="G6G-YV-Sga"/>
+                    <constraint firstItem="KGk-hl-i60" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="N96-eJ-IeS"/>
+                    <constraint firstItem="9KF-K0-3gV" firstAttribute="top" secondItem="ia6-VC-PQZ" secondAttribute="bottom" constant="1" id="OHh-sF-4vo"/>
+                    <constraint firstItem="9KF-K0-3gV" firstAttribute="leading" secondItem="auT-Ij-0Sg" secondAttribute="trailing" constant="10" id="Qco-LK-fpR"/>
+                    <constraint firstItem="qh5-hh-SOA" firstAttribute="top" secondItem="ia6-VC-PQZ" secondAttribute="bottom" constant="1" id="SOZ-hX-VMl"/>
+                    <constraint firstAttribute="trailing" secondItem="qh5-hh-SOA" secondAttribute="trailing" constant="15" id="Std-4M-geM"/>
+                    <constraint firstItem="lBt-v1-3Gw" firstAttribute="leading" secondItem="PAb-10-vyr" secondAttribute="trailing" constant="10" id="Szn-wh-KBx"/>
+                    <constraint firstItem="k17-RS-UTU" firstAttribute="leading" secondItem="PAb-10-vyr" secondAttribute="trailing" constant="10" id="W95-vq-30w"/>
+                    <constraint firstAttribute="trailing" secondItem="ia6-VC-PQZ" secondAttribute="trailing" constant="20" id="Yyb-Ej-Qpg"/>
+                    <constraint firstAttribute="bottom" secondItem="KGk-hl-i60" secondAttribute="bottom" id="ZaB-70-ABa"/>
+                    <constraint firstItem="lBt-v1-3Gw" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="aWP-pD-71B"/>
+                    <constraint firstItem="yBp-dn-bWg" firstAttribute="top" secondItem="ia6-VC-PQZ" secondAttribute="bottom" constant="1" id="eMA-dj-6DX"/>
+                    <constraint firstAttribute="trailing" secondItem="mxq-bw-PNG" secondAttribute="trailing" constant="19" id="gzU-zG-KOL"/>
+                    <constraint firstItem="PAb-10-vyr" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="mA9-0v-Tsc"/>
+                    <constraint firstItem="KGk-hl-i60" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="mXX-3V-6gc"/>
+                    <constraint firstAttribute="trailing" secondItem="lBt-v1-3Gw" secondAttribute="trailing" constant="10" id="rPS-sv-ffo"/>
+                    <constraint firstItem="auT-Ij-0Sg" firstAttribute="top" secondItem="ia6-VC-PQZ" secondAttribute="bottom" constant="7" id="usM-bw-KWA"/>
+                    <constraint firstItem="auT-Ij-0Sg" firstAttribute="leading" secondItem="PAb-10-vyr" secondAttribute="trailing" constant="10" id="w9A-Qa-OF3"/>
+                    <constraint firstItem="yBp-dn-bWg" firstAttribute="leading" secondItem="9KF-K0-3gV" secondAttribute="trailing" constant="5" id="ys7-0L-VYc"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="+" width="24" height="24"/>
+        <image name="_" width="24" height="24"/>
+        <image name="购物车选中" width="30" height="30"/>
+    </resources>
 </document>
