--- a/dudu/MainView/Home/View/CategoryTableViewCell.xib
+++ b/dudu/MainView/Home/View/CategoryTableViewCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="126" id="KGk-i7-Jjw" customClass="CategoryTableViewCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="126" id="KGk-i7-Jjw" customClass="CategoryTableViewCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="126"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -36,10 +36,11 @@
                         <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="41K-ex-ar1">
-                        <rect key="frame" x="111" y="40" width="199" height="15"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="41K-ex-ar1">
+                        <rect key="frame" x="111" y="40" width="40" height="15"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="15" id="Hbc-E3-14j"/>
+                            <constraint firstAttribute="width" constant="40" id="XuV-Sd-MJe"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="10"/>
                         <color key="textColor" red="0.12549019610000001" green="0.85098039219999999" blue="0.58039215690000001" alpha="1" colorSpace="calibratedRGB"/>
@@ -79,15 +80,24 @@
                         </constraints>
                         <state key="normal" image="加入购物车"/>
                     </button>
+                    <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="已售完" translatesAutoresizingMaskIntoConstraints="NO" id="vxO-gd-aEj">
+                        <rect key="frame" x="15" y="20" width="86" height="86"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="86" id="Zw6-eB-3fe"/>
+                            <constraint firstAttribute="height" constant="86" id="shp-k5-RZA"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="cVU-79-rwI" firstAttribute="top" secondItem="STU-iX-OIU" secondAttribute="bottom" constant="7" id="2ER-Be-z3p"/>
                     <constraint firstItem="3wk-wy-hSK" firstAttribute="top" secondItem="41K-ex-ar1" secondAttribute="bottom" constant="22" id="Asg-qz-LBB"/>
+                    <constraint firstItem="vxO-gd-aEj" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="HXg-04-bik"/>
                     <constraint firstAttribute="trailing" secondItem="nn3-NJ-ev6" secondAttribute="trailing" constant="10" id="MYv-xw-iwb"/>
                     <constraint firstAttribute="trailing" secondItem="mhk-y9-6G1" secondAttribute="trailing" constant="19" id="N1W-6Y-rNT"/>
                     <constraint firstItem="mhk-y9-6G1" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="19" id="OjJ-wa-zaM"/>
                     <constraint firstItem="cVU-79-rwI" firstAttribute="top" secondItem="STU-iX-OIU" secondAttribute="bottom" constant="7" id="TJM-fz-rMg"/>
                     <constraint firstItem="41K-ex-ar1" firstAttribute="leading" secondItem="BOz-vE-5Fj" secondAttribute="trailing" constant="10" id="UnR-qz-giI"/>
+                    <constraint firstItem="vxO-gd-aEj" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="X1I-cO-rcB"/>
                     <constraint firstItem="BOz-vE-5Fj" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="b59-ST-Not"/>
                     <constraint firstItem="nn3-NJ-ev6" firstAttribute="leading" secondItem="BOz-vE-5Fj" secondAttribute="trailing" constant="10" id="cDV-Fx-hxU"/>
                     <constraint firstItem="cVU-79-rwI" firstAttribute="leading" secondItem="BOz-vE-5Fj" secondAttribute="trailing" constant="10" id="ctz-kH-xKz"/>
@@ -96,7 +106,6 @@
                     <constraint firstAttribute="trailing" secondItem="3wk-wy-hSK" secondAttribute="trailing" constant="15" id="kCj-1F-AwC"/>
                     <constraint firstItem="STU-iX-OIU" firstAttribute="leading" secondItem="BOz-vE-5Fj" secondAttribute="trailing" constant="10" id="lAp-Kh-SVU"/>
                     <constraint firstItem="cVU-79-rwI" firstAttribute="leading" secondItem="BOz-vE-5Fj" secondAttribute="trailing" constant="10" id="nBk-cn-R3M"/>
-                    <constraint firstAttribute="trailing" secondItem="41K-ex-ar1" secondAttribute="trailing" constant="10" id="naT-sw-Csy"/>
                     <constraint firstAttribute="trailing" secondItem="STU-iX-OIU" secondAttribute="trailing" constant="10" id="qU1-AA-XdW"/>
                     <constraint firstItem="nn3-NJ-ev6" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="rrJ-1i-EB6"/>
                     <constraint firstAttribute="bottom" secondItem="mhk-y9-6G1" secondAttribute="bottom" id="sNr-bV-gsE"/>
@@ -106,9 +115,20 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
+            <connections>
+                <outlet property="CartBtn" destination="3wk-wy-hSK" id="hFk-yi-zR1"/>
+                <outlet property="GuiGeLabelWidth" destination="XuV-Sd-MJe" id="Bis-Dz-1tB"/>
+                <outlet property="GuigeLabel" destination="41K-ex-ar1" id="o6Y-xY-3Qk"/>
+                <outlet property="Image" destination="BOz-vE-5Fj" id="n4M-EX-PNs"/>
+                <outlet property="PriceLabel" destination="cVU-79-rwI" id="mPd-1m-dSM"/>
+                <outlet property="SalesOutImage" destination="vxO-gd-aEj" id="chG-dc-1fR"/>
+                <outlet property="TitleLabel" destination="nn3-NJ-ev6" id="dsg-Hq-fDF"/>
+                <outlet property="unitPriceLabel" destination="STU-iX-OIU" id="dyW-QQ-xk7"/>
+            </connections>
         </tableViewCell>
     </objects>
     <resources>
         <image name="加入购物车" width="27" height="27"/>
+        <image name="已售完" width="86" height="86"/>
     </resources>
 </document>
