--- a/dudu/MainView/ShoppingCart/View/ShopCartTableViewCell.xib
+++ b/dudu/MainView/ShoppingCart/View/ShopCartTableViewCell.xib
@@ -24,8 +24,14 @@
                         <constraints>
                             <constraint firstAttribute="width" constant="34" id="VlH-oh-rlG"/>
                         </constraints>
-                        <state key="normal" image="购物车选中"/>
                     </button>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="购物车商品未选中" translatesAutoresizingMaskIntoConstraints="NO" id="4l8-1m-mxj">
+                        <rect key="frame" x="5" y="50" width="24" height="24"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="24" id="Rjl-uW-Kja"/>
+                            <constraint firstAttribute="height" constant="24" id="ze4-BL-BIW"/>
+                        </constraints>
+                    </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PAb-10-vyr">
                         <rect key="frame" x="34" y="20" width="86" height="86"/>
                         <constraints>
@@ -120,9 +126,11 @@
                     <constraint firstItem="lBt-v1-3Gw" firstAttribute="leading" secondItem="PAb-10-vyr" secondAttribute="trailing" constant="10" id="Szn-wh-KBx"/>
                     <constraint firstItem="k17-RS-UTU" firstAttribute="leading" secondItem="PAb-10-vyr" secondAttribute="trailing" constant="10" id="W95-vq-30w"/>
                     <constraint firstAttribute="trailing" secondItem="ia6-VC-PQZ" secondAttribute="trailing" constant="20" id="Yyb-Ej-Qpg"/>
+                    <constraint firstItem="4l8-1m-mxj" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Z9K-5Q-rQ1"/>
                     <constraint firstAttribute="bottom" secondItem="KGk-hl-i60" secondAttribute="bottom" id="ZaB-70-ABa"/>
                     <constraint firstItem="lBt-v1-3Gw" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="aWP-pD-71B"/>
                     <constraint firstItem="yBp-dn-bWg" firstAttribute="top" secondItem="ia6-VC-PQZ" secondAttribute="bottom" constant="1" id="eMA-dj-6DX"/>
+                    <constraint firstItem="4l8-1m-mxj" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="f2v-8s-e9Z"/>
                     <constraint firstAttribute="trailing" secondItem="mxq-bw-PNG" secondAttribute="trailing" constant="19" id="gzU-zG-KOL"/>
                     <constraint firstItem="PAb-10-vyr" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="mA9-0v-Tsc"/>
                     <constraint firstItem="KGk-hl-i60" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="mXX-3V-6gc"/>
@@ -138,6 +146,6 @@
     <resources>
         <image name="+" width="24" height="24"/>
         <image name="_" width="24" height="24"/>
-        <image name="购物车选中" width="30" height="30"/>
+        <image name="购物车商品未选中" width="42" height="42"/>
     </resources>
 </document>
